[tool.poetry]
name = "data_utils"
version = "0.1.0"
description = ""
authors = ["THIVEND <baptiste.thivend@protonmail.com>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "data_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
metabase-api = "^0.3.0"

[tool.poetry.scripts]
db_changer = 'data_utils.card_modifier.main:db_changer'
model_changer = 'data_utils.card_modifier.main:model_changer'
custom_changer = 'data_utils.card_modifier.main:custom_changer'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
