[tool.poetry]
name = "data_utils"
version = "0.1.0"
description = ""
authors = ["THIVEND <baptiste.thivend@protonmail.com>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "data_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
metabase-api = "^0.3.0"
progressbar2 = "^4.2.0"
rocketchat-api = "^1.30.0"
pandas = "^2.0.1"
sqlalchemy = "^2.0.13"
psycopg2 = "^2.9.6"
openpyxl = "^3.1.2"

[tool.poetry.scripts]
# card_changer
db_changer = 'data_utils.card_changer.main:db_changer'
model_changer = 'data_utils.card_changer.main:model_changer'
custom_changer = 'data_utils.card_changer.main:custom_changer'

# query_checker
query_checker = 'data_utils.query_checker.main:start'

# form_summary
make_summary = "data_utils.form_summary.main:make_summary"

# file import
file_import = "data_utils.file_import.main:main"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
