[tool.poetry]
name = "data_utils"
version = "0.1.0"
description = ""
authors = ["THIVEND <baptiste.thivend@protonmail.com>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "data_utils"}]

[tool.poetry.dependencies]
python = "^3.10.0"
metabase-api = "^0.3.0"
progressbar2 = "^4.2.0"
rocketchat-api = "^1.30.0"
pandas = "^2.2.3"
sqlalchemy = "^2.0.13"
psycopg2 = "^2.9.6"
openpyxl = "^3.1.2"
citric = "^0.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
# card_changer
db_changer = 'data_utils.card_changer.main:db_changer'
model_changer = 'data_utils.card_changer.main:model_changer'
custom_changer = 'data_utils.card_changer.main:custom_changer'

# query_checker
query_checker = 'data_utils.query_checker.main:start'

# form_summary
make_summary = "data_utils.form_summary.main:make_summary"
make_summary_dbt = "data_utils.form_summary_dbt.main:make_summary_dbt"

# file import
file_import = "data_utils.file_import.main:main"

# pivot_answers
pivot_answers = "data_utils.pivot_answers.main:main"

# ls_import
ls_import = "data_utils.ls_import.main:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
