[project]
name = "osp-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.0",
    "marimo>=0.16.5",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "polars",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
